# Code-Portfolio

./: README.md
Adjustments_Submenu/adjustments/: adjustments.component.html  adjustments.component.scss  adjustments.component.spec.ts  adjustments.component.ts
Adjustments_Submenu/submenu-frame/: settings-group-tile.component.html  settings-group-tile.component.scss  settings-group-tile.component.spec.ts  settings-group-tile.component.ts
Brain_Trauma_iOS_app/: Module_Data.swift  Module_FillInBlank.swift  Module_Naming.swift  SQLiteFramework.swift  TextFileCollection.swift
CC3200_http_client_demo/: main.c
FileIO/: CMakeLists.txt  README.md  fileIO.cpp  fileIO.h  test_fileIOTools.cpp
MATLAB Filtering/Adaptive Equalization/: QPSK2bin_2.m  adaptiveEqualization.m  bin2text_2.m  filterQPSKNoise.m  lms_decode.m
MATLAB Filtering/tt_decode/: Project1Report.docx  tt_decode.m
Simple_Bash_Demo/: README.md  build_packages_x64.bat
ag-grid-example/: ColumnDef.ts  ag-grid-example.component.html  ag-grid-example.component.scss  ag-grid-example.component.ts
ag-grid-example/cell-editor/: cell-editor.component.html  cell-editor.component.scss  cell-editor.component.ts
ag-grid-example/cell-renderer/: cell-renderer.component.html  cell-renderer.component.ts
angular-electron-example/: README.md  angular.json  karma.conf.js  package.json  tsconfig.electron.json
angular-electron-example/electron_app/: electron-main.ts
angular-electron-example/src/: index.html
rxjs-state/: install-process.service.ts
trading/: README.md
windows-service-example/: main.go
(+71 files in other folders)
